Fix Cards in dark mode

--- a/src/assets/css/cards.css
+++ b/src/assets/css/cards.css
@@ -10,9 +10,9 @@
     0 2px 2px 0 rgba(0, 0, 0, .14),
     0 1px 5px 0 rgba(0, 0, 0, .12);
   text-decoration: none;
-  background-color: var(--lightgrey);
-  border-color: var(--lightgrey);
-  color: var(--jet);
+  background-color: rgb(57, 53, 53);
+  border-color: rgb(57, 53, 53);
+  color: var(--lightgrey);
   border-radius: 2px;
 }
 
@@ -55,5 +55,9 @@
 }
 
 @media (prefers-color-scheme: light) {
-
+  .card {
+    background-color: var(--white);
+    border-color: var(--white);
+    color: var(--jet);
+  }
 }
